Algunos cambios de estilos en el home, detalles refinados, inclusión de firebase como tecnología

--- a/public/index0.html
+++ b/public/index0.html
@@ -682,6 +682,148 @@
 			</section> <!-- end icon boxes -->
 
 
+			<!-- Portfolio -->
+				<section class="section-wrap" id="portfolio-masonry">
+					<div class="container">
+						<h2 class="text-center">Tópicos importantes</h2>
+						<p class="subheading text-center">Tecnología y algo más</p>
+
+						<!-- filter -->
+						<div class="row mt-50">
+							<div class="col-md-12">
+								<div class="portfolio-filter">
+									<a href="#" class="filter active transition" data-filter="*">All</a>
+									<a href="#" class="filter transition" data-filter=".branding">Branding</a>
+									<a href="#" class="filter transition" data-filter=".illustration">Illustration</a>
+									<a href="#" class="filter transition" data-filter=".web-design">Web Design</a>
+									<a href="#" class="filter transition" data-filter=".print">Print</a>
+								</div> <!-- end filter -->
+							</div> <!-- end col -->
+						</div> <!-- end row -->
+
+						<div class="grid masonry">
+
+							<!-- work item -->
+							<div class="masonry-item web-design print">
+								<div class="work-img">
+									<a href="https://www.youtube.com/watch?v=Scxs7L0vhZ4?autoplay=1" class="lightbox-video mfp-iframe">
+										<img src="upload/project_1.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>A4 Paper Mockup</h3>
+											<span>Print</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item web-design branding">
+								<div class="work-img">
+									<a href="upload/project_2_big.jpg" data-lightbox="true">
+										<img src="upload/project_2.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Vinyl Cover</h3>
+											<span>Branding</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item illustration branding">
+								<div class="work-img">
+									<a href="upload/project_3_big.jpg" data-lightbox="true">
+										<img src="upload/project_3.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Paper Bag</h3>
+											<span>Illustration</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item print branding">
+								<div class="work-img">
+									<a href="upload/project_4_big.jpg" data-lightbox="true">
+										<img src="upload/project_4.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Business Card</h3>
+											<span>Branding</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item branding illustration">
+								<div class="work-img">
+									<a href="upload/project_5_big.jpg" data-lightbox="true">
+										<img src="upload/project_5.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Sweater Identity</h3>
+											<span>Branding</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item print branding">
+								<div class="work-img">
+									<a href="upload/project_6_big.jpg" data-lightbox="true">
+										<img src="upload/project_6.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Business Card</h3>
+											<span>Print</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item print illustration">
+								<div class="work-img">
+									<a href="upload/project_7_big.jpg" data-lightbox="true">
+										<img src="upload/project_7.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Cool Poster</h3>
+											<span>Print</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item web-design">
+								<div class="work-img">
+									<a href="upload/project_8_big.jpg" data-lightbox="true">
+										<img src="upload/project_8.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Gravity Paper</h3>
+											<span>Web Design</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+							<!-- work item -->
+							<div class="masonry-item illustration">
+								<div class="work-img">
+									<a href="upload/project_9_big.jpg" data-lightbox="true">
+										<img src="upload/project_9.jpg" alt="img">
+										<div class="work-description text-center">
+											<h3>Business Card</h3>
+											<span>Illustration</span>
+										</div>
+									</a>
+								</div>
+							</div> <!-- end work-item -->
+
+						</div> <!-- end row -->
+					</div> <!-- end container -->
+				</section> <!-- end portfolio-->
+
 		<!-- Partners -->
 			<section class="section-wrap bg-light partners-light">
 				<div class="container">
@@ -710,12 +852,6 @@
 							<div class="item">
 								<a href="http://developer.android.com/intl/es/index.html">
 									<img src="upload/partner_logo_dark_4.png" alt="">
-								</a>
-							</div> <!-- end fourth logo -->
-
-							<div class="item">
-								<a href="http://firebase.google.com/">
-									<img src="upload/partner_logo_dark_44.png" alt="">
 								</a>
 							</div> <!-- end fourth logo -->
 
